--- a/weapp/termite/static/termite_js/app/component/appkit/scratchdescription/scratchdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/scratchdescription/scratchdescription.html
@@ -8,8 +8,8 @@
             <div class="wui-i-cardContainer wa-cardContainer" id="cardContainer">
                 <div class="wui-i-cardInfo" id="info">
                     <h2>
-                        <span>一等奖</span>
-                        <span>10元话费</span>
+                        <span class="wa-grade"></span>
+                        <span class="wa-prizeName"></span>
                     </h2>
                     <div class="xa-retry">再试一次</div>
                 </div>
