--- a/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
+++ b/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
@@ -154,7 +154,6 @@
         </div>
         <div class="wui-i-bottom xa-dialog-bottom">
             <button type="button" class="wui-i-dialog-btn wui-i-userCenter xa-userCenter">个人中心</button>
-            <button type="button" class="wui-i-dialog-btn wui-i-closeDialog xa-closeDialog xa-closeBtn">再来一次</button>
         </div>
     </div>
 {% endblock %}
@@ -249,12 +248,12 @@
                 this.$closeBtn.hide();
             }else if(prize_type == 'no_prize'){
                 this.$title.html('很遗憾').show();
-                this.$contentHeader.html("没有中奖，再接再厉吧~");
+                this.$contentHeader.html("没有中奖，再接再厉~");
                 this.$userCenter.show();
                 this.$closeBtn.show();
             }else if(prize_type == 'none'){
                 this.$title.html('很遗憾').show();
-                this.$contentHeader.html("没有中奖，再接再厉吧~");
+                this.$contentHeader.html("没有中奖，再接再厉~");
                 this.$userCenter.hide();
                 this.$closeBtn.show();
             }else if(prize_type == 'coupon' || prize_type == 'integral'){
@@ -265,7 +264,7 @@
                 this.$closeBtn.show();
             }else if(prize_type == 'gameover'){
                 this.$title.hide();
-                this.$contentHeader.html("活动已经结束啦，<br>下次早点来哦~");
+                this.$contentHeader.html("活动已经结束啦");
                 this.$closeBtn.hide();
             }else if(prize_type == 'timesout'){
                 this.$title.hide();
@@ -273,7 +272,7 @@
                 this.$closeBtn.hide();
             }else if(prize_type == 'notready'){
                 this.$title.html('请耐心等待').show();
-                this.$contentHeader.html("刮刮卡活动还未开始！");
+                this.$contentHeader.html("活动还未开始哦~");
                 this.$userCenter.show();
                 this.$closeBtn.hide();
             }
@@ -291,8 +290,6 @@
         ResultDialog.prototype.close = function(){
             mask('hide');
             this.$el.hide();
-            scratch_card.initialize();
-            isScratching = false;
         };
     </script>
     <script type="text/javascript">
@@ -301,61 +298,18 @@
             $(function(){
                 getDynamicData();
                 $('.xa-retry').click(function(){
-                    window.location.reload();
-                })
+                    scratch_card.initialize();
+                    isScratching = false;
+                    $('.wui-i-cardInfo').get(0).style.zIndex = '1';
+                    $('.wa-prizeName').html('');
+                    $('.wa-grade').html('');
+                });
             });
         }
 
         function initLottery(){
             scratch_card = new scratchCard();
             resultDialog = new ResultDialog();
-
-            // $(".xa-lottery-go").click(function(){
-            //     var _that = this;
-            //     $(this).addClass('xa-lottery-go-to');
-            //     window.setTimeout(function(){
-            //         $(_that).removeClass('xa-lottery-go-to');
-            //     }, 100);
-            //     if(lottery.isRolling || !lottery_status || can_play_count==0){
-            //         if(lottery.isRolling) return false;
-            //         if(activity_status == '未开始'){
-            //             resultDialog.render({
-            //                 prize_type: 'notready'
-            //             });
-            //         }else if(activity_status == '已结束'){
-            //             resultDialog.render({
-            //                 prize_type: 'gameover'
-            //             });
-            //         }else{
-            //             resultDialog.render()
-            //         }
-            //         return false;
-            //     }else{
-            //         W.getApi().call({
-            //             app: 'm/apps/scratch',
-            //             resource: 'scratch_prize',
-            //             method: 'put',
-            //             args:{
-            //                 id: W.appRecordId,
-            //                 webapp_owner_id: W.webappOwnerId
-            //             },
-            //             success: function(data){
-            //                 lottery.roll();
-            //                 lottery.stop(data);
-            //             },
-            //             error: function(error){
-            //                 if(error.errMsg == '奖品已抽光'){
-            //                     resultDialog.render({
-            //                         prize_type: 'none',
-            //                         prize_name: ''
-            //                     });
-            //                 }else{
-            //                     wuiAlert(error.errMsg);
-            //                 }
-            //             }
-            //         });
-            //     }
-            // });
         }
         function getDynamicData(){
             W.getApi().call({
@@ -429,6 +383,8 @@
 
         scratchCard.prototype = {
             initialize: function(){
+                this.isOk = 0;
+                this.ctx.globalCompositeOperation = "source-over";
                 this.c1.width = this.c1.clientWidth;  
                 this.c1.height = this.c1.clientHeight; 
                 this.bindEvent(); 
@@ -453,6 +409,8 @@
             eventUp: function(e){
                 e.preventDefault();
                 var a = this.ctx.getImageData(0,0,this.c1.width,this.c1.height);
+                console.log(a);
+                console.log(this.isOk);
                 var j=0;
                 for(var i=3;i<a.data.length;i+=4){
                         if(a.data[i]==0)j++;
@@ -518,13 +476,13 @@
                         success: function(data){
                             console.log(data);
                             prize_data = data;
-                            $('.wa-prizeName').html(data.prize_name);
+                            $('.wa-grade').html(data.result);
                             if(data.can_play_count == 0){
                                 $('.xa-retry').hide();
                             }
-                            if(data.result){
-                                $('.wa-grade').html(data.result); 
-                            }
+                            if(data.prize_name != '谢谢参与'){
+                                $('.wa-prizeName').html(data.prize_name);
+                            }               
                         },
                         error: function(error){
                             if(error.errMsg == '奖品已抽光'){
