--- a/weapp/mall/templates/mall/editor/product_pool.html
+++ b/weapp/mall/templates/mall/editor/product_pool.html
@@ -95,7 +95,11 @@
                                 {{/if}}
                                 </p>
                                 </div>
-                                <span class="xui-fontGary">商品编码: ${product.user_code}</span>
+                                {{if product.is_use_custom_model}}
+                                <span class="label label-info xa-showAllModels cursor-pointer" style="font-size: 1.0em;">查看${product.models.length}个规格详情</span>
+                                {{else}}
+                                    <span class="xui-fontGary">商品编码: ${product.user_code}</span>
+                                {{/if}}
                             </div>
                         </div>
                     </td>
