修改lazyload嵌套加载，增加橱窗图片延迟

--- a/weapp/termite/workbench/templates/workbench/wepage_webapp_page.html
+++ b/weapp/termite/workbench/templates/workbench/wepage_webapp_page.html
@@ -11,7 +11,7 @@
 <script type="text/javascript">
     W.preloadImgsOnPage([
         { moduleName: 'imageGroup', tagId: '.wui-imageGroup a img' },
-        { moduleName: 'singleImageWithTitle', tagId: '.singleImageWithTitle img' },
+        { moduleName: 'imageDisplay', tagId: '.wui-imagedisplay a img' },
         { moduleName: 'imageNav', tagId: '.wui-imagenav a img' },
         { moduleName: 'productList', tagId: '.xa-products-box ul li img' },
         
