--- a/weapp/termite/static/termite_js/app/component/appkit/scratchdescription/scratchdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/scratchdescription/scratchdescription.html
@@ -6,12 +6,12 @@
         <div class="wui-i-roulette wui-i-title"></div>
         <div class="wui-i-card">
             <div class="wui-i-cardContainer wa-cardContainer" id="cardContainer">
-                <div class="wui-i-cardInfo" id="info">
+                <div class="wui-i-cardInfo wa-cardInfo" id="info">
                     <h2>
                         <span class="wa-grade"></span>
                         <span class="wa-prizeName"></span>
                     </h2>
-                    <div class="xa-retry">再试一次</div>
+                    <div class="xa-retry xui-i-retry">再试一次</div>
                 </div>
                 <canvas id="cvs">
                 </canvas>
