--- a/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
+++ b/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
@@ -503,7 +503,7 @@
                                 scratch_card.initialize();
                                 $('.wui-i-cardInfo').get(0).style.zIndex = '1';
                                 $('.wa-prizeName').html('');
-                                $('.wa-grade').html('');                              
+                                $('.wa-grade').html('谢谢参与');                              
                             }
                             isScratching = false;
                         }
