--- a/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
+++ b/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
@@ -236,6 +236,10 @@
                     $('.wa-prizeName').html('');
                     $('.wa-grade').html('');
                 }
+                if(error_mes){
+                   $('.xa-retry').hide(); 
+                    error_mes = '';
+                }
             });
         }
         /**
