--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -77,6 +77,7 @@
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/addImg.js"></script>
 
         <script type="text/javascript" src="/termite_static/v3/system/debug.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/webapp/wepage_async_component_load.js"></script>
         <!-- *end_prunt_task* -->
 
 
