在我的活动列表中增加幸运码、砸金蛋、刮刮卡记录

--- a/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery.html
@@ -114,7 +114,7 @@
         </div>
         <div class="wui-i-bottom xa-dialog-bottom">
             <button type="button" class="wui-i-dialog-btn wui-i-userCenter xa-userCenter">个人中心</button>
-            <button type="button" class="wui-i-dialog-btn wui-i-closeDialog xa-closeDialog xa-closeBtn">再来一次</button>
+            <a href="/m/apps/exlottery/m_exlottery_page/?webapp_owner_id={{ request.webapp_owner_id }}&id={{ record_id }}"><button type="button" class="wui-i-dialog-btn wui-i-closeDialog xa-closeDialog xa-closeBtn" style="color:#FFF">再来一次</button></a>
         </div>
     </div>
 {% endblock %}
