修改商品模块，渲染模块数据，同步改成异步

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -60,6 +60,8 @@
         <script type="text/javascript" src="/termite_static/v3/system/validate.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/swipeImage.js"></script>
         <script type="text/javascript" src="/termite_static/v3/lib/lazyload.js"></script>
+        <script type="text/javascript" src="/static_v2/lib/handlebars-v3.0.1.js"></script>
+        <script type="text/javascript" src="/static_v2/js/system/handlebar_helper.js"></script>
 
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/weshopBottomNav.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/weshopSideNav.js"></script>
@@ -78,6 +80,7 @@
 
         <script type="text/javascript" src="/termite_static/v3/system/debug.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/wepage_async_component_load.js"></script>
+
         <!-- *end_prunt_task* -->
 
 
